feat: update database

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
 HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+PORT=1371
+APP_KEYS=XNVddiAAZAsJyxrr44ATpQ==,DUOCgpL+9J6dPHWKVjARgw==,gSj4iOBZq4NY73V3B4rkSA==,Nm6JKSL0IpiiESWLXQz7wg==
+API_TOKEN_SALT=ALBdu+5+bFAMGYO2EGM6GA==
+ADMIN_JWT_SECRET=qD1wBpHIurXghR+98C14XQ==
+TRANSFER_TOKEN_SALT=uSge4t9ErV/ruHxO/zTvGQ==
+# Database
+
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5461
+DATABASE_NAME=script_server
+DATABASE_USERNAME=script_server
+DATABASE_PASSWORD=Admin@123
+DATABASE_SSL=false
+JWT_SECRET=/s2dfNIKluefEU/bb86tvQ==
